# automotive-diagnostics

./: .gitignore  LICENSE  README.md  WORKSPACE
common/: BUILD.bazel  dojo.py  dtcs.yaml  messages.yaml  model_math.py  vehicle_plotter.py
digital_twin_model/: BUILD.bazel  fault_injection.py  fault_tree.yaml  fault_tree_util.py
vehicle_model/: BUILD.bazel  battery.py  cooling_system.py  inverter.py  motor.py  vehicle.py
vehicle_model/diagnostics/: BUILD.bazel  dtc_util.py  dtcs.yaml
vehicle_model/ecu/: BUILD.bazel  bmm.py  ecu.py  pmm.py  tmm.py
vehicle_model/plant/: BUILD.bazel  battery.py  cooling_system.py  inverter.py  motor.py
