package(default_visibility = ["//visibility:public"])

load("@py_automotive_diagnostics//:requirements.bzl", "requirement", "whl_requirement")
load("@rules_python//python:defs.bzl", "py_binary", "py_library")


# Binaries.
py_binary(
    name = "vehicle_plotter",
    srcs = ["vehicle_plotter.py"],
    deps = [
        "//vehicle_model:vehicle",
        requirement("numpy"),
        requirement("pyqtgraph"),
        requirement("PySide6"),
    ],
)

# Libraries.

py_library(
    name = "model_math",
    srcs = ["model_math.py"],
)