package(default_visibility = ["//visibility:public"])

load("@py_automotive_diagnostics//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_library")
load("@subpar//:subpar.bzl", "par_binary")


# Binaries.

par_binary(
    name = "vehicle",
    srcs = ["vehicle.py"],
    deps = [
        "//vehicle_model/plant:battery",
        "//vehicle_model/plant:cooling_system",
        "//vehicle_model/plant:inverter",
        "//vehicle_model/plant:motor",
    ],
)